kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-kubernetes-demo
spec:
  selector:
    matchLabels:
      run: laravel-kubernetes-demo
  template:
    metadata:
      labels:
        run: laravel-kubernetes-demo
    spec:
      containers:
        - name: demo
          image: us-central1-docker.pkg.dev/velvety-broker-350614/tpg/laravel-kubernetes-demo:latest
          ports:
            - containerPort: 80
