kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: laravel-kubernetes-demo
              servicePort: 80
